--- a/form-website/frontend/index.html
+++ b/form-website/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.PNG" />
+    <link rel="icon" type="png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
     <title>Prenotazione Appuntamenti - Riforma e Progresso</title>
