add Open Graph tags and fix favicon type

--- a/form-website/frontend/index.html
+++ b/form-website/frontend/index.html
@@ -1,8 +1,16 @@
 <!doctype html>
 <html lang="it">
   <head>
+    <meta name="author" content="Enzo Brancati" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta property="og:title" content="Prenotazione Appuntamenti - Riforma e Progresso" />
+    <meta property="og:description" content="Prenota il tuo colloquio con Riforma e Progresso" />
+    <meta property="og:image" content="/logo.jpg" />
+    <meta property="og:url" content="https://colloqui.riformaeprogresso.it" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Riforma e Progresso" />
+    <meta property="og:locale" content="it_IT" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
     <title>Prenotazione Appuntamenti - Riforma e Progresso</title>
